started on types

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,13 @@ mkmf.log
 .idea/vcs.xml
 
 .idea/workspace.xml
+
+.idea/ez7gen-staged.iml
+
+.idea/ez7gen-staged.iml
+
+.idea/runConfigurations/test_codeTable__ez7gen_staged.xml
+
+.idea/ez7gen-staged.iml
+
+.idea/ez7gen-staged.iml
