--- a/lib/ez7gen/resources/properties.yml
+++ b/lib/ez7gen/resources/properties.yml
@@ -3,8 +3,8 @@ person.names.last: [Daugherty,Small,Webster,Reilly,Key,Velazquez,Holder,Larson,W
 dmgr.gender: [M,F]
 address.streetNames: [504 Honey Elk Wynd,7608 Silent Glen,7741 Foggy Pond Jetty,7061 Iron Blossom Ridge,5777 Fallen Panda Expressway]
 address.cities: [Oatmeal,Owl,Dollar Settlement,Saint-Quentin,Ragtown]
-address.states: [TN,MS,TN,MS,GA]
+#address.states: [TN,MS,TN,MS,GA]
+address.states: [AL,AK,AZ,AR,CA,CO,CT,DE,FL,GA,HI,ID,IL,IN,IA,KS,KY,LA,ME,MD,MA,MI,MN,MS,MO,MT,NE,NV,NH,NJ,NM,NY,NC,ND,OH,OK,OR,PA,RI,SC,SD,TN,TX,UT,VT,VA,WA,WV,WI,WY]
 address.zips: [37166-9572,38889-6760,37326-6978,39377-7406,39833-8563]
 address.countries: [USA,USA,USA,USA,USA]
 phones: [(931)872-7634,(601)110-8688,(731)538-7434,(662)120-6474,(470)446-7282]
-allStates: [AL,AK,AZ,AR,CA,CO,CT,DE,FL,GA,HI,ID,IL,IN,IA,KS,KY,LA,ME,MD,MA,MI,MN,MS,MO,MT,NE,NV,NH,NJ,NM,NY,NC,ND,OH,OK,OR,PA,RI,SC,SD,TN,TX,UT,VT,VA,WA,WV,WI,WY]
