--- a/.gitignore
+++ b/.gitignore
@@ -20,24 +20,4 @@ tmp
 *.o
 *.a
 mkmf.log
-.idea/.name
-
-.idea/ez7gen.iml
-
-.idea/misc.xml
-
-.idea/modules.xml
-
-.idea/vcs.xml
-
-.idea/workspace.xml
-
-.idea/ez7gen-staged.iml
-
-.idea/ez7gen-staged.iml
-
-.idea/runConfigurations/test_codeTable__ez7gen_staged.xml
-
-.idea/ez7gen-staged.iml
-
-.idea/ez7gen-staged.iml
+.idea
