--- a/lib/ez7gen/resources/properties.yml
+++ b/lib/ez7gen/resources/properties.yml
@@ -8,3 +8,41 @@ address.states.all: [AL,AK,AZ,AR,CA,CO,CT,DE,FL,GA,HI,ID,IL,IN,IA,KS,KY,LA,ME,MD
 address.zips: [37166-9572,38889-6760,37326-6978,39377-7406,39833-8563]
 address.countries: [USA,USA,USA,USA,USA]
 address.phones: [(931)872-7634,(601)110-8688,(731)538-7434,(662)120-6474,(470)446-7282]
+
+
+#job Titles []Accountant, Application Developer, Attorney, Engineer, Dentist,Nurse Practitioner, Paramedic, Pharmacist, Physician] CT1.49 Job Title
+#Person Class Codes 193200000X Multi-specialty,193400000X Single specialty,208D00000X General practice,207R00000X Internal medicine,208600000X Surgery #ROL.9 Provider Type (both the code and the description need to be populated)
+
+#ICD 10 Observation Codes
+#R71.8 Other abnormality of red blood cells,
+#R82.8 Abnormal findings on cytological and histological examination of urine,
+#R81 Glycosuria,
+#R82.99 Other abnormal findings in urine,
+#R79.0 Abnormal level of blood mineral,
+#R03.1 Nonspecific low blood-pressure reading,
+#R78.79 Finding of abnormal level of heavy metals in blood
+
+
+#OBX.3 Observation Identifier (both the code and the description need to be populated)
+#ICD 10 Allergen Codes
+#T78.40XA Allergy, unspecified, initial encounter,
+#T78.40XD Allergy, unspecified, subsequent encounter,
+#Z91.048 Other nonmedicinal substance allergy status,
+#Z91.09 Other allergy status, other than to drugs and biological substances,
+#Z91.013  Allergy to seafood,
+#Z91.010 Allergy to peanuts,
+#Z88.0  Allergy status to penicillin,
+#Z91.038 Other insect allergy status,
+#Z91.030 Bee Allergy status
+
+#AL1.3 Allergen Code/Mnemonic/ Description (both the code and the description need to be populated)
+codes.allergens:
+ #ICD 10: Allergy Reaction Codes
+ L50.0: Hives
+ R11.2: Nausea with vomiting
+ R68.2: Dry mouth
+ K52.2: Diarrhea
+ J30.9: Itching
+#AL1.5 Allergy Reaction Code #(just the code)
+allergens.yn: [Y,N]
+
