--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,15 @@ ez7gen-web/cache/
 test/Additional Tables with values_v1.1.txt
 
 test/at.txt
+
+ez7gen-web/config/templates/2.4/60-n.txt
+
+ez7gen-web/config/templates/2.4/60.txt
+
+ez7gen-web/config/templates/2.4/60-f.txt
+
+ez7gen-web/config/templates/2.4/60-f.txt
+
+ez7gen-web/config/templates/2.4/60-n.txt
+
+ez7gen-web/config/templates/2.4/60.txt
