--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ ez7gen-web/config/templates/2.4/60-f.txt
 ez7gen-web/config/templates/2.4/60-n.txt
 
 ez7gen-web/config/templates/2.4/60.txt
+/ez7gen-web/public/js/controllers/main_controller.js.org
