re-factoring, dynamic types

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ ez7gen-web/config/templates/2.4/60-n.txt
 
 ez7gen-web/config/templates/2.4/60.txt
 /ez7gen-web/public/js/controllers/main_controller.js.org
+/test/at.txt
