logging, cleanup and sad data type

--- a/lib/ez7gen/resources/properties.yml
+++ b/lib/ez7gen/resources/properties.yml
@@ -1,5 +1,7 @@
 ---
 web.install.dir: "/Users/romansova/RubymineProjects/ez7gen/ez7gen-web"
+logger.level: 0
+logger.comments: "DEBUG = 0; INFO = 1; WARN = 2; ERROR = 3; FATAL = 4; UNKNOWN = 5"
 person.names.first:
 - Odysseus
 - Xander
